workflow related gui alignment issues

--- a/app/bundles/CoreBundle/Assets/css/app.css
+++ b/app/bundles/CoreBundle/Assets/css/app.css
@@ -4980,7 +4980,7 @@ figcaption {
    right: 0;
    left: 0;
    width: 100%;
-   z-index: 1035;
+   z-index: 1030;
   padding: 10px;
   height: 55px;
  }
